# spy-ssz

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  block-sample-3642900.json  main.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  verify-consensus-specs.yml
benchmarks/: __init__.py  benchmark_block.py  benchmark_corpus.py  benchmark_deneb.py  benchmark_json_array.py
native/: README.md  bridge.c  json_parser.spy  metadata.spy  native_api.spy  native_writer.spy  schema_block_containers.spy  schema_block_containers_encode.spy  schema_block_containers_ssz.spy  schema_deneb.spy  schema_deneb_ssz.spy  schema_electra.spy  schema_electra_encode.spy  schema_electra_ssz.spy  schema_gloas.spy  schema_gloas_ssz.spy  schema_signing.spy  ssz_kernels.spy  ssz_object.spy
postpy_ssz/: __init__.py  deneb.py  kernels.py  native_deneb.py  native_electra.py  native_fulu.py  native_gloas.py  native_object.py
spy_ssz/: __init__.py  __init__.pyi  _repr.py  _schema_enums.py  blocks.py  blocks.pyi  consensus_types.json  consensus_types.py  deneb.py  deneb.pyi  electra.py  electra.pyi  fulu.py  fulu.pyi  gloas.py  gloas.pyi  native_blocks.py  native_electra.py  native_fulu.py  native_gloas.py  native_object.py  native_signing.py  preset.py  projections.py  projections.pyi  schema.py  schemas.yaml  signing.py  signing.pyi  ssz.py
spy_ssz/electra/: __init__.py  __init__.pyi
spy_ssz/fulu/: __init__.py  __init__.pyi
src/: README.md  api.spy  bridge.c  decode_status.h  decode_status.spy  json_lowering.spy  json_parser.spy  merkle.c  metadata.spy  metadata_constants.h  preset_config.spy  schema_block_containers.spy  schema_block_containers_encode.spy  schema_block_containers_ssz.spy  schema_deneb.spy  schema_deneb_ssz.spy  schema_electra.spy  schema_electra_ssz.spy  schema_gloas.spy  schema_gloas_ssz.spy  schema_signing.spy  sha256_pair.c  ssz_kernels.spy  ssz_lowering.spy  ssz_object.spy  ssz_reader.spy  writer.spy
tests/: test_blocks.py  test_check_consensus_vectors.py  test_consensus_types.py  test_deneb.py  test_electra.py  test_generated_metadata.py  test_kernels.py  test_native_blocks.py  test_native_deneb.py  test_native_electra.py  test_native_schemas.py  test_native_signing.py  test_presets.py  test_projections.py  test_remerkleable_compat.py  test_repr.py  test_schemas.py  test_signing.py  test_value_semantics.py
tools/: build_extension.py  build_native.py  check_consensus_vectors.py  generate_consensus_types.py  generate_spy_metadata.py
typing_tests/: public_exports.py
(+25 files in other folders)
