[project]
name = "spy-ssz"
version = "0.1.0"
description = "Compiled SPy-backed Ethereum SSZ codecs"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "cffi>=2.1.0",
    "msgspec>=0.21.1",
    "pyyaml>=6.0.2",
]

[build-system]
requires = [
    "cffi>=2.1.0",
    "pyyaml>=6.0.2",
    "setuptools>=83.0.0",
    "spylang @ git+https://github.com/spylang/spy.git@012ae501eb6a0adc3baff261c97ec9b56c80c2d1",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
spy_ssz = ["*.pyi", "consensus_types.json", "schemas.yaml", "presets/*/*.yaml"]

[tool.setuptools]
packages = ["spy_ssz", "spy_ssz.presets"]

[dependency-groups]
dev = [
    "eth-consensus-specs>=1.7.0a12",
    "eth-remerkleable==0.1.31",
    "pytest>=9.1.1",
]
